turning off emailVerifyEnabled

--- a/modules/rsmart-common/templates/config_custom.json.erb
+++ b/modules/rsmart-common/templates/config_custom.json.erb
@@ -1369,7 +1369,7 @@
 
     "emailLocation": 'accountpreferences',
 
-    "emailVerifyEnabled": true,
+    "emailVerifyEnabled": false,
 
     /**
      * Kaltura Settings
