--- a/environments/standalone-demo/modules/localconfig/templates/setenv.sh.erb
+++ b/environments/standalone-demo/modules/localconfig/templates/setenv.sh.erb
@@ -1,4 +1,4 @@
 # file managed by puppet
 
 # filled out via puppet templating
-export JAVA_OPTS="-server -Xms<%= javamemorymin %> -Xmx<%= javamemorymax %> -XX:PermSize=<%= javapermsize %> -XX:NewRatio=3 -XX:+UseParNewGC -XX:+UseConcMarkSweepGC -XX:+CMSParallelRemarkEnabled -XX:MaxTenuringThreshold=0 -XX:-DisableExplicitGC -XX:CMSInitiatingOccupancyFraction=80 -XX:+UseStringCache -XX:+UseCompressedStrings -XX:+OptimizeStringConcat -Djava.awt.headless=true -verbose:gc -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -XX:+PrintGCDateStamps -XX:+PrintTenuringDistribution -XX:+PrintCommandLineFlags"
+export JAVA_OPTS="-server -Xms<%= javamemorymin %> -Xmx<%= javamemorymax %> -XX:PermSize=<%= javapermsize %> -XX:NewRatio=3 -XX:+UseParNewGC -XX:+UseConcMarkSweepGC -XX:+CMSParallelRemarkEnabled -XX:MaxTenuringThreshold=0 -XX:-DisableExplicitGC -XX:CMSInitiatingOccupancyFraction=80 -XX:+UseStringCache -XX:+UseCompressedStrings -Djava.awt.headless=true -verbose:gc -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -XX:+PrintGCDateStamps -XX:+PrintTenuringDistribution -XX:+PrintCommandLineFlags"
