--- a/modules/people/templates/lspeelmon-bash_profile.sh.erb
+++ b/modules/people/templates/lspeelmon-bash_profile.sh.erb
@@ -82,7 +82,7 @@ alias md='mkdir'
 export JAVA_OPTS="-server -Xmx1g -XX:MaxPermSize=512m -XX:NewRatio=3 \
 -XX:+UseParNewGC -XX:+UseConcMarkSweepGC -XX:+CMSParallelRemarkEnabled \
 -XX:MaxTenuringThreshold=0 -XX:-DisableExplicitGC -XX:CMSInitiatingOccupancyFraction=80 \
--XX:+UseStringCache -XX:+UseCompressedStrings -XX:+OptimizeStringConcat \
+-XX:+UseStringCache -XX:+UseCompressedStrings \
 -Djava.awt.headless=true -verbose:gc -XX:+PrintGCDetails -XX:+PrintGCTimeStamps \
 -XX:+PrintGCDateStamps -XX:+PrintTenuringDistribution \
 -XX:+PrintCommandLineFlags"
