--- a/modules/rsmart-common/templates/solr-setenv.sh.erb
+++ b/modules/rsmart-common/templates/solr-setenv.sh.erb
@@ -4,7 +4,7 @@ export JAVA_OPTS="-server -Xms6656m -Xmx6656m -XX:PermSize=256m -XX:MaxPermSize=
 -XX:NewRatio=3 -XX:+UseParNewGC -XX:+UseConcMarkSweepGC -XX:+CMSParallelRemarkEnabled \
 -XX:MaxTenuringThreshold=0 -XX:-DisableExplicitGC -XX:CMSInitiatingOccupancyFraction=40 \
 -XX:+UseCMSInitiatingOccupancyOnly -XX:+UseCompressedOops -XX:+UseStringCache \
--XX:+UseCompressedStrings -XX:+OptimizeStringConcat -Djava.awt.headless=true \
+-XX:+UseCompressedStrings -Djava.awt.headless=true \
 -verbose:gc -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -XX:+PrintGCDateStamps \
 -XX:+PrintTenuringDistribution -XX:+PrintCommandLineFlags \
 -Dcom.sun.management.jmxremote.port=3000 \
