--- a/modules/rsmart-common/templates/solr-setenv.sh.erb
+++ b/modules/rsmart-common/templates/solr-setenv.sh.erb
@@ -2,9 +2,9 @@
 export JAVA_HOME=/usr/java/jdk1.6.0_30
 export JAVA_OPTS="-server -Xms6656m -Xmx6656m -XX:PermSize=256m -XX:MaxPermSize=256m \
 -XX:NewRatio=3 -XX:+UseParNewGC -XX:+UseConcMarkSweepGC -XX:+CMSParallelRemarkEnabled \
--XX:MaxTenuringThreshold=0 -XX:-DisableExplicitGC -XX:CMSInitiatingOccupancyFraction=40 \
--XX:+UseCMSInitiatingOccupancyOnly -XX:+UseCompressedOops -XX:+UseStringCache \
--XX:+UseCompressedStrings -Djava.awt.headless=true \
+-XX:MaxTenuringThreshold=0 -XX:-DisableExplicitGC -XX:CMSInitiatingOccupancyFraction=60 \
+-XX:+UseCMSInitiatingOccupancyOnly \
+-Djava.awt.headless=true \
 -verbose:gc -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -XX:+PrintGCDateStamps \
 -XX:+PrintTenuringDistribution -XX:+PrintCommandLineFlags \
 -Dcom.sun.management.jmxremote.port=3000 \
