--- a/modules/solr/templates/solr.erb
+++ b/modules/solr/templates/solr.erb
@@ -7,6 +7,11 @@
 SOLR_JAVA_OPTS=" -Dsolr.solr.home=<%= scope.lookupvar('solr::common::solr_home') %> -Djetty.port=8983 "
 SOLR_USER="<%= scope.lookupvar('solr::common::user') %>"
 SOLR_HOME="<%= scope.lookupvar('solr::common::solr_home') %>"
+
+<% if javagclog -%>
+SOLR_JAVA_OPTS="$SOLR_JAVA_OPTS -verbosegc -XX:+PrintGCDetails -Xloggc:<%= javagclog %> "
+<% end -%>
+
 JAVA_BIN="/usr/bin/java"
 
 INIT_PID="/var/run/solr.pid"
