--- a/modules/oae/templates/sakaioae.sh.erb
+++ b/modules/oae/templates/sakaioae.sh.erb
@@ -13,6 +13,8 @@ SAKAIOAE_HOME="<%= scope.lookupvar('oae::params::basedir') %>"
 SAKAIOAE_JAR="<%= scope.lookupvar('oae::params::basedir') %>/sakaioae.jar"
 JAVA_BIN="<%= java %>"
 
+# JAVA_BIN="-agentpath:/usr/local/yourkit/<%= yjp_filename %>/bin/linux-x86-64/libyjpagent.so=onexit=snapshot,dir=/tmp"
+
 INIT_PID="/var/run/${SAKAIOAE_USER}.pid"
 PROG="SakaiOAE"
 
