NOJIRA PR Review
Changes:

* Changed the /usr/local/sakaioae directory to 755 instead of 750 to make automation a little simpler (not actually a review, but change was discussed)
* Moved some performance-testing-environment-specific configs and templates out to the community-cluster localconfig (left gclog support in 'core')
* Made YourKit configurable on the oae::app::server level. However it still understands YourKit because it needs to drop config into the daemon script.
* Indicate the drop_all_tables.sql is postgresql only
* Added default value for jetty javagclog, also changed another that had a default value of 'undef' to 'false'

--- a/environments/community-cluster/modules/localconfig/templates/drop_all_tables.sql.erb
+++ b/environments/community-cluster/modules/localconfig/templates/drop_all_tables.sql.erb
@@ -1,3 +1,6 @@
+-- 
+-- Drop script for PostgreSQL only
+-- 
 drop table if exists css cascade;
 drop table if exists au_css cascade;
 drop table if exists cn_css cascade;
