--- a/modules/oae/templates/sakaioae.sh.erb
+++ b/modules/oae/templates/sakaioae.sh.erb
@@ -13,8 +13,10 @@ SAKAIOAE_HOME="<%= scope.lookupvar('oae::params::basedir') %>"
 SAKAIOAE_JAR="<%= scope.lookupvar('oae::params::basedir') %>/sakaioae.jar"
 JAVA_BIN="<%= java %>"
 
+<% if yjp_agent_module then -%>
 # YourKit profiling
-# JAVA_BIN="$JAVA_BIN -agentpath:<%= scope.lookupvar('yourkit::root_dir') %>/<%= scope.lookupvar('yourkit::base_dir') %>/bin/linux-x86-64/libyjpagent.so=onexit=snapshot,dir=/home/<%= scope.lookupvar('oae::params::user') %>/Snapshots,monitors,sampling"
+<% if not yjp_enabled -%># <% end -%>JAVA_BIN="$JAVA_BIN -agentpath:<%= yjp_agent_module %>=onexit=snapshot,<% if yjp_snapshots_dir -%>dir=<%= yjp_snapshots_dir %>,<% end -%>monitors,sampling"
+<% end -%>
 
 INIT_PID="/var/run/${SAKAIOAE_USER}.pid"
 PROG="SakaiOAE"
